egonlang-core/res/examples/invalid/let_decl_typed_as_bool_with_number_value_type.eg
let a: bool = 123;

// out: TypeError: mismatched types: expected type `bool` but received `number`